--- a/index.html
+++ b/index.html
@@ -29,14 +29,18 @@
             <div class="row">
                 <div class="col-md-6 text-center">
                     <h1>Your Stats</h1>
+                    <p id="guessed-letters">Guessed letters will go here.</p>
                 </div>
                 <div class="col-md-6 text-center">
                     <img src="./assets/images/hangmanImages/0-hangman.png" alt="">
+                    <h3 id="champ-name">Blanks will go here.</h3>
                 </div>
             </div>
         </div>
         <!-- End of Container Div -->
+        <!-- Game Script -->
         <script src="./assets/javascript/game.js"></script>
+
     </body>
 
 </html>
