Added winCheck and img updater

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
 
       <!-- Navbar -->
-        <nav class="navbar navbar-dark bg-dark">
+        <nav class="navbar navbar-dark bg-dark text-center">
             <span class="navbar-brand mb-0 h1">League of Legends Hangman</span>
         </nav>
         <!-- Container Div -->
@@ -32,7 +32,7 @@
                     <p id="guessed-letters">Guessed letters will go here.</p>
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="./assets/images/hangmanImages/0-hangman.png" alt="">
+                    <img src="./assets/images/hangmanImages/0-hangman.png" alt="" id="hangman-img">
                     <h3 id="champ-name">Blanks will go here.</h3>
                 </div>
             </div>
