Fixed some positioning

--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
             </div>
             <!-- Row 2 -->
             <div class="row">
-                <div class="col-md-6 text-center">
+                <div class="col-md-5 text-center">
                     <h1>Your Stats</h1>
                     <p id="guessed-letters">Guessed letters will go here.</p>
                 </div>
-                <div class="col-md-6 text-center">
+                <div class="col-md-2"></div>
+                <div class="col-md-5 text-center">
                     <img src="./assets/images/hangmanImages/0-hangman.png" alt="" id="hangman-img">
                     <h3 id="champ-name">Blanks will go here.</h3>
                 </div>
